--- a/aboutme.html
+++ b/aboutme.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>About Tatiana</title>
+<title>All About Tati</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>About Tati</h1>
+<p>HELLO MY NAME IS TATI! </p>
 
 </body>
 </html>
