--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,7 @@
 <h1>About Tati</h1>
 <p>HELLO MY NAME IS TATI! </p>
 
-
+<img src="https://www.google.com/search?q=llama&source=lnms&tbm=isch&sa=X&ved=0ahUKEwihydHzudzUAhUT3WMKHcidAkEQ_AUICygC&biw=1366&bih=662#imgrc=WiFRclWxJix5zM:">
 
 </body>
 </html>
