--- a/aboutme.html
+++ b/aboutme.html
@@ -8,6 +8,7 @@
 <h1>About Tati</h1>
 <p>HELLO MY NAME IS TATI! I am currently obessed with the show 100 right now. A fun fact about me is that I made it to varsity volleyball and track in my freshmen year, but the following year I decided to try tennis instead of volleyball.  </p>
 
+<img src="https://www.google.com/search?q=llama&source=lnms&tbm=isch&sa=X&ved=0ahUKEwihydHzudzUAhUT3WMKHcidAkEQ_AUICygC&biw=1366&bih=662#imgrc=WiFRclWxJix5zM:" alt="a llama" >
 
 </body>
 </html>
