--- a/aboutme.html
+++ b/aboutme.html
@@ -3,6 +3,9 @@
 <head>
 <title>All About Tati</title>
 </head>
+
+<body style="background-color:powderblue;">          
+          
 <body>
 
 <h1>About Tati</h1>
