--- a/aboutme.html
+++ b/aboutme.html
@@ -4,7 +4,7 @@
 <title>All About Tati</title>
 </head>
 
-<body style="background-color:powderblue;">          
+<body style="background-color:#F5B7B1;">          
           
 <body>
 
