--- a/aboutme.html
+++ b/aboutme.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>All About Tati</title>
+<title> "All About Tati:center" </title>
 </head>
 
 <body style="background-color:#F5B7B1;">          
