--- a/aboutme.html
+++ b/aboutme.html
@@ -8,8 +8,9 @@
           
 <body>
 
-<h1> About Tati </h1>
-<p> HELLO MY NAME IS TATI! My favorite animal is llama!!  A fun fact about me is that I made it to varsity volleyball and track my freshmen year, but the following year I decided to try tennis instead of volleyball.  </p>
+<h1 style="About Tati:center;">Centered Heading</h1>
+<p style="HELLO MY NAME IS TATI! My favorite animal is llama!!  A fun fact about me is that I made it to varsity volleyball and track my freshmen year, but the following year I decided to try tennis instead of volleyball.:center;">Centered paragraph.</p>
+
 
 <img src="https://cdn.pixabay.com/photo/2013/10/02/23/00/lama-190040_960_720.jpg" alt="llama"  width=200 height=200>
                             
