--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,7 @@
           
 <body>
 
-<center>About Tati!</center>
+          <h1 <center>About Tati!</center> </h1>
 <center>HELLO MY NAME IS TATI! My favorite animal is llama!!  A fun fact about me is that I made it to varsity volleyball and track my freshmen year, but the following year I decided to try tennis instead of volleyball.</p>
 !</center>
 
