--- a/aboutme.html
+++ b/aboutme.html
@@ -11,7 +11,7 @@
           
 
 <h1 align="center"> About Tati! </h1>          
-<p align="center"> HELLO MY NAME IS TATI! My favorite animal is llama!!  A fun fact about me is that I made it to varsity volleyball and track my freshmen year, but the following year I decided to try tennis instead of volleyball!</p>
+<p align="center"> HELLO MY NAME IS TATI! My favorite animal is a llama!!  A fun fact about me is that I made it to varsity volleyball and track my freshmen year, but the following year I decided to try tennis instead of volleyball!</p>
 
 <img align="center" src="https://cdn.pixabay.com/photo/2013/10/02/23/00/lama-190040_960_720.jpg" alt="llama"  width=200 height=200>
           
