--- a/Core4Template.html
+++ b/Core4Template.html
@@ -45,16 +45,16 @@
         </tr>
 
         <!-- Fill in the row for Variables -->
-        <tr>a
+        <tr>
         <td><b>Variables</b></td>
-          <td> 1 </td>
-          <td>  </td>
-          <td>  </td>
-          <td>  </td>
+          <td> Something that stores a value </td>
+          <td> A box that contains something in it   </td>
+          <td> option = int(input "Enter Options:")) </td>
+          <td> Answer to name  </td>
         </tr>
 
         <!-- Fill in the row for Loops -->
-        <tr>b
+        <tr>
           <td><b>Loops</b></td>
           <td>2 </td>
           <td>  </td>
@@ -63,7 +63,7 @@
         </tr>
 
         <!-- Fill in the row for Conditionals -->
-        <tr>c
+        <tr>
           <td><b>Conditionals</b></td>
           <td> 3 </td>
           <td>  </td>
@@ -72,7 +72,7 @@
         </tr>
 
         <!-- Fill in the row for Functions -->
-        <tr>d
+        <tr>
           <td><b>Functions</b></td>
           <td> 4 </td>
           <td>  </td>
