--- a/Core4Template.html
+++ b/Core4Template.html
@@ -56,28 +56,28 @@
         <!-- Fill in the row for Loops -->
         <tr>
           <td><b>Loops</b></td>
-          <td>2 </td>
-          <td>  </td>
-          <td>  </td>
-          <td>  </td>
+          <td> A function that repeats a selective program </td>
+          <td> Retakes for a test </td>
+          <td> Range  </td>
+          <td> Repeat Forever  </td>
         </tr>
 
         <!-- Fill in the row for Conditionals -->
         <tr>
           <td><b>Conditionals</b></td>
-          <td> 3 </td>
-          <td>  </td>
-          <td>  </td>
-          <td>  </td>
+          <td> If then / If then Else  </td>
+          <td> If you study, you will do well on the test  </td>
+          <td> If option == 1: </td>
+          <td> If space is clicked, image will appear  </td>
         </tr>
 
         <!-- Fill in the row for Functions -->
         <tr>
           <td><b>Functions</b></td>
-          <td> 4 </td>
-          <td>  </td>
-          <td>  </td>
-          <td>  </td>
+          <td> a thing that help run the program </td>
+          <td> math equation </td>
+          <td> print  </td>
+          <td> Variables  </td>
         </tr>
 
       </table>
