--- a/aboutme.html
+++ b/aboutme.html
@@ -61,47 +61,38 @@
 
         <!-- Define the first row of the table -->
         <tr>
-          <th>Core4 Concept</th>
-          <th>Technical Definition</th>
-          <th>Real-Life Analogy</th>
-          <th>Python Example</th>
-          <th>Scratch Example</th>
+          <th>Name and Picture</th>
+          <th>How is it used</th>
+          <th>How it works </th>
         </tr>
 
         <!-- Fill in the row for Variables -->
         <tr>
-        <td><b>Variables</b></td>
-          <td> Something that stores a value </td>
-          <td> A box that contains something in it   </td>
-          <td> option = int(input "Enter Options:")) </td>
-          <td> Answer to name  </td>
+        <td><b>3-pin header</b></td>
+          <td> The pin header is an electrical connector. It connects arduino boards and shield.   </td>
+          <td>  It works like jumper wires.  </td>
         </tr>
 
         <!-- Fill in the row for Loops -->
         <tr>
-          <td><b>Loops</b></td>
-          <td> A function that repeats a selective program </td>
-          <td> Retakes for a test </td>
-          <td> Range  </td>
-          <td> Repeat Forever  </td>
+          <td><b>Whisker Wire</b></td>
+          <td> Whisker wires senses its surroundings and tells the robot when it runs into things.  </td>
+          <td> There are metal standoffs which provides electrical connection.  </td>
         </tr>
 
         <!-- Fill in the row for Conditionals -->
         <tr>
-          <td><b>Conditionals</b></td>
-          <td> If then / If then Else  </td>
-          <td> If you study, you will do well on the test  </td>
-          <td> If option == 1: </td>
-          <td> If space is clicked, image will appear  </td>
+          <td><b>Phototransistor</b></td>
+          <td> Phototransistor uses light to contol the flow of current.   </td>
+          <td> It converts light energy into electrical energy.   </td>
         </tr>
 
         <!-- Fill in the row for Functions -->
         <tr>
-          <td><b>Functions</b></td>
-          <td> a thing that help run the program </td>
-          <td> math equation </td>
-          <td> print  </td>
-          <td> Variables  </td>
+          <td><b>Infrared detector </b></td>
+          <td> Infrared detectors detect heat.  </td>
+          <td> It detects infrared radiation which is used by looking at energy.  </td>
+
         </tr>
 
       </table>
